# charles

./: CMakeLists.txt  main.cpp
src/: ray.h  vec3.h
